<resources>
    <string name="app_name">BMICalculator</string>
    <string name="wzrost">Wzrost</string>
    <string name="waga">Waga</string>
    <string name="oblicz_bmi">Oblicz BMI</string>
    <string name="wiek">Wiek</string>
    <string name="PPM_MEN">Oblicz PMM Dla Mezczyzn</string>
    <string name="PPM_WOMAN">Oblicz PMM Dla Kobiet</string>
    <string name="witaj_w_mojej_aplikacjii">Witaj w Mojej Aplikacjii</string>
</resources>